Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -539,7 +539,7 @@
   "pli-tv-kd13:14.2.14": "He asked the Sangha for probation for a half-month for that offense, ",
   "pli-tv-kd13:14.2.15": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:14.2.16": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:14.2.17": "He is now asking the Sangha to send him back to the beginning for that offense. ",
+  "pli-tv-kd13:14.2.17": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.18": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.19": "This is the motion. ",
   "pli-tv-kd13:14.2.20": "Please, Venerables, I ask the Sangha to listen. ",
