--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -547,7 +547,7 @@
   "pli-tv-kd13:14.2.22": "He asked the Sangha for probation for a half-month for that offense, ",
   "pli-tv-kd13:14.2.23": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:14.2.24": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:14.2.25": "He is now asking the Sangha to send him back to the beginning for that offense. ",
+  "pli-tv-kd13:14.2.25": "He’s now asking the Sangha to send him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.26": "The Sangha sends him back to the beginning for that offense. ",
   "pli-tv-kd13:14.2.27": "Any monk who approves of sending him back to the beginning for that offense should remain silent. ",
   "pli-tv-kd13:14.2.28": "Any monk who does not approve should speak up. ",
