--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -576,7 +576,7 @@
   "pli-tv-kd13:14.3.18": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.3.19": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:14.3.20": "and the Sangha sent him back to the beginning. ",
-  "pli-tv-kd13:14.3.21": "He is now asking the Sangha for probation for that offense, simultaneous with the probation for the previous offense. ",
+  "pli-tv-kd13:14.3.21": "He’s now asking the Sangha for probation for that offense, simultaneous with the probation for the previous offense. ",
   "pli-tv-kd13:14.3.22": "If it seems appropriate to the Sangha, the Sangha should give him that simultaneous probation. ",
   "pli-tv-kd13:14.3.23": "This is the motion. … ",
   "pli-tv-kd13:14.3.24": "‘Please, Venerables, I ask the Sangha to listen. ",
