--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -586,7 +586,7 @@
   "pli-tv-kd13:14.3.28": "While he was on probation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:14.3.29": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:14.3.30": "and the Sangha sent him back to the beginning. ",
-  "pli-tv-kd13:14.3.31": "He is now asking the Sangha for probation for that offense, simultaneous with the probation for the previous offense. ",
+  "pli-tv-kd13:14.3.31": "He’s now asking the Sangha for probation for that offense, simultaneous with the probation for the previous offense. ",
   "pli-tv-kd13:14.3.32": "The Sangha gives him that simultaneous probation. ",
   "pli-tv-kd13:14.3.33": "Any monk who approves of giving him that simultaneous probation should remain silent. ",
   "pli-tv-kd13:14.3.34": "Any monk who does not approve should speak up. ",
