--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -617,7 +617,7 @@
   "pli-tv-kd13:16.1.8": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:16.1.9": "and say: ",
   "pli-tv-kd13:16.1.10": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for a half-month. … ",
-  "pli-tv-kd13:16.1.11": "I have now completed that probation and I ask the Sangha for the trial period of six days for the three offenses.’ ",
+  "pli-tv-kd13:16.1.11": "I’ve now completed that probation and I ask the Sangha for the trial period of six days for the three offenses.’ ",
   "pli-tv-kd13:16.1.12": "And he should ask a second ",
   "pli-tv-kd13:16.1.13": "and a third time. ",
   "pli-tv-kd13:16.1.14": "A competent and capable monk should then inform the Sangha: ",
