Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -759,7 +759,7 @@
   "pli-tv-kd13:20.2.1": "And it should be given like this: ",
   "pli-tv-kd13:20.2.2": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:20.2.3": "and say: ",
-  "pli-tv-kd13:20.2.4": "‘Venerables, I have committed a number of offenses entailing suspension: ",
+  "pli-tv-kd13:20.2.4": "‘Venerables, I’ve committed a number of offenses entailing suspension: ",
   "pli-tv-kd13:20.2.5": "one concealed for one day … ",
   "pli-tv-kd13:20.2.6": "one for ten days. ",
   "pli-tv-kd13:20.2.7": "I ask the Sangha for simultaneous probation according to the longest duration, that is, for the offense that was concealed for ten days.’ ",
