Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -770,7 +770,7 @@
   "pli-tv-kd13:20.2.12": "The monk so-and-so has committed a number of offenses entailing suspension: ",
   "pli-tv-kd13:20.2.13": "one concealed for one day … ",
   "pli-tv-kd13:20.2.14": "one for ten days. ",
-  "pli-tv-kd13:20.2.15": "He is asking the Sangha for simultaneous probation according to the longest duration, that is, for the offense that was concealed for ten days. ",
+  "pli-tv-kd13:20.2.15": "He’s asking the Sangha for simultaneous probation according to the longest duration, that is, for the offense that was concealed for ten days. ",
   "pli-tv-kd13:20.2.16": "If it seems appropriate to the Sangha, the Sangha should give him that simultaneous probation. ",
   "pli-tv-kd13:20.2.17": "This is the motion. ",
   "pli-tv-kd13:20.2.18": "Please, Venerables, I ask the Sangha to listen. ",
