Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -777,7 +777,7 @@
   "pli-tv-kd13:20.2.19": "The monk so-and-so has committed a number of offenses entailing suspension: ",
   "pli-tv-kd13:20.2.20": "one concealed for one day … ",
   "pli-tv-kd13:20.2.21": "one for ten days. ",
-  "pli-tv-kd13:20.2.22": "He is asking the Sangha for simultaneous probation according to the longest duration, that is, for the offense that was concealed for ten days. ",
+  "pli-tv-kd13:20.2.22": "He’s asking the Sangha for simultaneous probation according to the longest duration, that is, for the offense that was concealed for ten days. ",
   "pli-tv-kd13:20.2.23": "The Sangha gives him that simultaneous probation. ",
   "pli-tv-kd13:20.2.24": "Any monk who approves of giving him ",
   "pli-tv-kd13:20.2.25": "that simultaneous probation should remain silent. ",
