Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -805,7 +805,7 @@
   "pli-tv-kd13:21.1.18": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:21.1.19": "The monk so-and-so has committed a number of offenses entailing suspension: one concealed for one day … ",
   "pli-tv-kd13:21.1.20": "ten for ten days. ",
-  "pli-tv-kd13:21.1.21": "He is asking the Sangha for simultaneous probation according to the longest duration, that is, for all the offenses that were concealed the longest. ",
+  "pli-tv-kd13:21.1.21": "He’s asking the Sangha for simultaneous probation according to the longest duration, that is, for all the offenses that were concealed the longest. ",
   "pli-tv-kd13:21.1.22": "If it seems appropriate to the Sangha, the Sangha should give him that simultaneous probation. ",
   "pli-tv-kd13:21.1.23": "This is the motion. ",
   "pli-tv-kd13:21.1.24": "Please, Venerables, I ask the Sangha to listen. ",
