Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -812,7 +812,7 @@
   "pli-tv-kd13:21.1.25": "The monk so-and-so has committed a number of offenses entailing suspension: ",
   "pli-tv-kd13:21.1.26": "one concealed for one day … ",
   "pli-tv-kd13:21.1.27": "ten for ten days. ",
-  "pli-tv-kd13:21.1.28": "He is asking the Sangha for simultaneous probation according to the longest duration, that is, for all the offenses that were concealed the longest. ",
+  "pli-tv-kd13:21.1.28": "He’s asking the Sangha for simultaneous probation according to the longest duration, that is, for all the offenses that were concealed the longest. ",
   "pli-tv-kd13:21.1.29": "The Sangha gives him that simultaneous probation. ",
   "pli-tv-kd13:21.1.30": "Any monk who approves of giving him that simultaneous probation should remain silent. ",
   "pli-tv-kd13:21.1.31": "Any monk who doesn’t approve should speak up. ",
