Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -838,7 +838,7 @@
   "pli-tv-kd13:22.3.3": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd13:22.3.4": "‘Venerables, I had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.3.5": "I thought, ",
-  "pli-tv-kd13:22.3.6": "“I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:22.3.6": "“I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.3.7": "Let me ask the Sangha for probation for two months for one of those offenses.” ",
   "pli-tv-kd13:22.3.8": "I did, ",
   "pli-tv-kd13:22.3.9": "and the Sangha gave me that probation. ",
