--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -852,7 +852,7 @@
   "pli-tv-kd13:22.4.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:22.4.3": "The monk so-and-so had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.4.4": "He thought, ",
-  "pli-tv-kd13:22.4.5": "“I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:22.4.5": "“I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.4.6": "Let me ask the Sangha for probation for two months for one of those offenses.” ",
   "pli-tv-kd13:22.4.7": "He did, ",
   "pli-tv-kd13:22.4.8": "and the Sangha gave him that probation. ",
