--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -865,7 +865,7 @@
   "pli-tv-kd13:22.4.21": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:22.4.22": "The monk so-and-so had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.4.23": "He thought, ",
-  "pli-tv-kd13:22.4.24": "“I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:22.4.24": "“I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:22.4.25": "Let me ask the Sangha for probation for two months for one of those offenses.” ",
   "pli-tv-kd13:22.4.26": "He did, ",
   "pli-tv-kd13:22.4.27": "and the Sangha gave him that probation. ",
