--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -884,7 +884,7 @@
   "pli-tv-kd13:23.1.0": "2.4 Processes for staying on probation for two months ",
   "pli-tv-kd13:23.1.1": "“It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:23.1.2": "He thinks, ",
-  "pli-tv-kd13:23.1.3": "‘I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:23.1.3": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:23.1.4": "Let me ask the Sangha for probation for two months for one of those offenses.’ ",
   "pli-tv-kd13:23.1.5": "He does, ",
   "pli-tv-kd13:23.1.6": "and the Sangha gives him that probation. ",
