Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -888,7 +888,7 @@
   "pli-tv-kd13:23.1.4": "Let me ask the Sangha for probation for two months for one of those offenses.’ ",
   "pli-tv-kd13:23.1.5": "He does, ",
   "pli-tv-kd13:23.1.6": "and the Sangha gives him that probation. ",
-  "pli-tv-kd13:23.1.7": "While on probation, he is conscience-stricken. ",
+  "pli-tv-kd13:23.1.7": "While on probation, he’s conscience-stricken. ",
   "pli-tv-kd13:23.1.8": "He considers all this ",
   "pli-tv-kd13:23.1.15": "and thinks, ‘Let me ask the Sangha for probation for two months for the other offense too.’ ",
   "pli-tv-kd13:23.1.16": "He then asks the Sangha, ",
