--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -915,7 +915,7 @@
   "pli-tv-kd13:23.3.14": "and the Sangha gives him probation for two months for the other offense too. ",
   "pli-tv-kd13:23.3.15": "Starting right there, that monk must stay on probation for two months. ",
   "pli-tv-kd13:23.4.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:23.4.2": "He is sure of one offense, but unsure of the other. ",
+  "pli-tv-kd13:23.4.2": "He’s sure of one offense, but unsure of the other. ",
   "pli-tv-kd13:23.4.3": "He asks the Sangha for probation for two months for the offense he is sure of, ",
   "pli-tv-kd13:23.4.4": "and the Sangha gives him that probation. ",
   "pli-tv-kd13:23.4.5": "While on probation, he becomes sure of the other offense too. ",
