--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -928,7 +928,7 @@
   "pli-tv-kd13:23.5.2": "He knows he has concealed one offense, but doesn’t know he has concealed the other. ",
   "pli-tv-kd13:23.5.3": "He asks the Sangha for probation for two months for both offenses, ",
   "pli-tv-kd13:23.5.4": "and the Sangha gives him that probation. ",
-  "pli-tv-kd13:23.5.5": "While he is on probation, another monk arrives. He is learned, a master of the tradition; he is an expert on the Teaching, the Monastic Law, and the Key Terms; he is knowledgeable and competent, has a sense of conscience, and is afraid of wrongdoing and fond of the training. ",
+  "pli-tv-kd13:23.5.5": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has a sense of conscience, and is afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd13:23.5.6": "He says, ",
   "pli-tv-kd13:23.5.7": "‘What has this monk committed? ",
   "pli-tv-kd13:23.5.8": "Why is he on probation?’ ",
