--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -943,7 +943,7 @@
   "pli-tv-kd13:23.6.2": "He remembers he has concealed one offense, but doesn’t remember he has concealed the other. ",
   "pli-tv-kd13:23.6.3": "He asks the Sangha for probation for two months for both offenses, ",
   "pli-tv-kd13:23.6.4": "and the Sangha gives him that probation. ",
-  "pli-tv-kd13:23.6.5": "While he is on probation, another monk arrives. He is learned, a master of the tradition; he is an expert on the Teaching, the Monastic Law, and the Key Terms; he is knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
+  "pli-tv-kd13:23.6.5": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd13:23.6.6": "He says, ",
   "pli-tv-kd13:23.6.7": "‘What has this monk committed? ",
   "pli-tv-kd13:23.6.8": "Why is he on probation?’ ",
