Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -966,7 +966,7 @@
   "pli-tv-kd13:23.6.37": "and he says, ",
   "pli-tv-kd13:23.6.38": "‘The giving of probation for the offense he’s sure he has concealed is legitimate, ",
   "pli-tv-kd13:23.6.39": "legal, and has effect. ",
-  "pli-tv-kd13:23.6.40": "The giving of probation for the offense he is unsure if he has concealed is illegitimate, ",
+  "pli-tv-kd13:23.6.40": "The giving of probation for the offense he’s unsure if he has concealed is illegitimate, ",
   "pli-tv-kd13:23.6.41": "illegal, and has no effect. ",
   "pli-tv-kd13:23.6.42": "For one offense he only deserves the trial period.’” ",
   "pli-tv-kd13:24.1.1": "At one time a monk committed two offenses entailing suspension, both concealed for two months. ",
