--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -971,7 +971,7 @@
   "pli-tv-kd13:23.6.42": "For one offense he only deserves the trial period.’” ",
   "pli-tv-kd13:24.1.1": "At one time a monk committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.1.2": "He thought, ",
-  "pli-tv-kd13:24.1.3": "‘I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:24.1.3": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.1.4": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.1.5": "He did, ",
   "pli-tv-kd13:24.1.6": "and the Sangha gave him that probation. ",
