Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -987,7 +987,7 @@
   "pli-tv-kd13:24.3.4": "and say: ",
   "pli-tv-kd13:24.3.5": "‘Venerables, I had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.6": "I thought, ",
-  "pli-tv-kd13:24.3.7": "‘I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:24.3.7": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.8": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.3.9": "I did, ",
   "pli-tv-kd13:24.3.10": "and the Sangha gave me that probation. ",
