Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1001,7 +1001,7 @@
   "pli-tv-kd13:24.3.24": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:24.3.25": "The monk so-and-so had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.26": "He thought, ",
-  "pli-tv-kd13:24.3.27": "‘I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:24.3.27": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.28": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.3.29": "He did, ",
   "pli-tv-kd13:24.3.30": "and the Sangha gave him that probation. ",
