--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1008,7 +1008,7 @@
   "pli-tv-kd13:24.3.31": "While he was on probation, he was conscience-stricken. ",
   "pli-tv-kd13:24.3.32": "He considered all this, ",
   "pli-tv-kd13:24.3.39": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
-  "pli-tv-kd13:24.3.40": "He is now asking the Sangha for probation for an additional month for those two offenses. ",
+  "pli-tv-kd13:24.3.40": "He’s now asking the Sangha for probation for an additional month for those two offenses. ",
   "pli-tv-kd13:24.3.41": "If it seems appropriate to the Sangha, the Sangha should give him that probation. ",
   "pli-tv-kd13:24.3.42": "This is the motion. ",
   "pli-tv-kd13:24.3.43": "Please, Venerables, I ask the Sangha to listen. ",
