--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1014,7 +1014,7 @@
   "pli-tv-kd13:24.3.43": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:24.3.44": "The monk so-and-so had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.45": "He thought, ",
-  "pli-tv-kd13:24.3.46": "I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:24.3.46": "I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.47": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.3.48": "He did, ",
   "pli-tv-kd13:24.3.49": "and the Sangha gave him that probation. ",
