Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1021,7 +1021,7 @@
   "pli-tv-kd13:24.3.50": "While he was on probation, he was conscience-stricken. ",
   "pli-tv-kd13:24.3.51": "He considered all this, ",
   "pli-tv-kd13:24.3.58": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
-  "pli-tv-kd13:24.3.59": "He is now asking the Sangha for probation for an additional month for those two offenses. ",
+  "pli-tv-kd13:24.3.59": "He’s now asking the Sangha for probation for an additional month for those two offenses. ",
   "pli-tv-kd13:24.3.60": "The Sangha gives him that probation. ",
   "pli-tv-kd13:24.3.61": "Any monk who approves of giving him that probation should remain silent. ",
   "pli-tv-kd13:24.3.62": "Any monk who doesn’t approve should speak up. ",
