--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1032,7 +1032,7 @@
   "pli-tv-kd13:24.3.67": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.1.1": "“It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.1.2": "He thinks, ",
-  "pli-tv-kd13:25.1.3": "‘I have committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:25.1.3": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.1.4": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:25.1.5": "He does, ",
   "pli-tv-kd13:25.1.6": "and the Sangha gives him that probation. ",
