--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1064,7 +1064,7 @@
   "pli-tv-kd13:25.2.30": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.2.31": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.2.32": "He’s sure of one month, but unsure of the other. ",
-  "pli-tv-kd13:25.2.33": "He asks the Sangha for one month probation for the month he is sure of, ",
+  "pli-tv-kd13:25.2.33": "He asks the Sangha for one month probation for the month he’s sure of, ",
   "pli-tv-kd13:25.2.34": "and the Sangha gives him that probation. ",
   "pli-tv-kd13:25.2.35": "While on probation, he becomes sure of the other month. ",
   "pli-tv-kd13:25.2.36": "He considers all this ",
