--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1103,7 +1103,7 @@
   "pli-tv-kd13:25.3.39": "illegal, and has no effect. ",
   "pli-tv-kd13:25.3.40": "For one month he only deserves the trial period.’ ",
   "pli-tv-kd13:25.3.41": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:25.3.42": "He is sure he has concealed for one month, but unsure if he has concealed for the other. ",
+  "pli-tv-kd13:25.3.42": "He’s sure he has concealed for one month, but unsure if he has concealed for the other. ",
   "pli-tv-kd13:25.3.43": "He asks the Sangha for probation for two months for both offenses, ",
   "pli-tv-kd13:25.3.44": "and the Sangha gives him that probation. ",
   "pli-tv-kd13:25.3.45": "While he is on probation, another monk arrives. He is learned, a master of the tradition; he is an expert on the Teaching, the Monastic Law, and the Key Terms; he is knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
