Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1112,7 +1112,7 @@
   "pli-tv-kd13:25.3.48": "Why is he on probation?’ ",
   "pli-tv-kd13:25.3.49": "They tell him everything, ",
   "pli-tv-kd13:25.3.55": "and he says, ",
-  "pli-tv-kd13:25.3.56": "‘The giving of probation for the month he is sure he has concealed is legitimate, ",
+  "pli-tv-kd13:25.3.56": "‘The giving of probation for the month he’s sure he has concealed is legitimate, ",
   "pli-tv-kd13:25.3.57": "legal, and has effect. ",
   "pli-tv-kd13:25.3.58": "The giving of probation for the month he is unsure if he has concealed is illegitimate, ",
   "pli-tv-kd13:25.3.59": "illegal, and has no effect. ",
