Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1114,7 +1114,7 @@
   "pli-tv-kd13:25.3.55": "and he says, ",
   "pli-tv-kd13:25.3.56": "‘The giving of probation for the month he’s sure he has concealed is legitimate, ",
   "pli-tv-kd13:25.3.57": "legal, and has effect. ",
-  "pli-tv-kd13:25.3.58": "The giving of probation for the month he is unsure if he has concealed is illegitimate, ",
+  "pli-tv-kd13:25.3.58": "The giving of probation for the month he’s unsure if he has concealed is illegitimate, ",
   "pli-tv-kd13:25.3.59": "illegal, and has no effect. ",
   "pli-tv-kd13:25.3.60": "For one month he only deserves the trial period.’” ",
   "pli-tv-kd13:26.1.0": "2.5 Purifying probation ",
