--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1130,7 +1130,7 @@
   "pli-tv-kd13:26.2.1": "And it should be given like this: ",
   "pli-tv-kd13:26.2.2": "That monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, ",
   "pli-tv-kd13:26.2.3": "and say: ",
-  "pli-tv-kd13:26.2.4": "‘Venerables, I have committed a number of offenses entailing suspension. ",
+  "pli-tv-kd13:26.2.4": "‘Venerables, I’ve committed a number of offenses entailing suspension. ",
   "pli-tv-kd13:26.2.5": "I don’t know the number of offenses or the number of days; ",
   "pli-tv-kd13:26.2.6": "I don’t remember the number of offenses or the number of days; ",
   "pli-tv-kd13:26.2.7": "I’m unsure of the number of offenses and the number of days. ",
