--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1142,7 +1142,7 @@
   "pli-tv-kd13:26.2.13": "The monk so-and-so has committed a number of offenses entailing suspension. ",
   "pli-tv-kd13:26.2.14": "He does not know the number of offenses or the number of days; ",
   "pli-tv-kd13:26.2.15": "he does not remember the number of offenses or the number of days; ",
-  "pli-tv-kd13:26.2.16": "he is unsure of the number of offenses and the number of days. ",
+  "pli-tv-kd13:26.2.16": "he’s unsure of the number of offenses and the number of days. ",
   "pli-tv-kd13:26.2.17": "He is asking the Sangha for a purifying probation for those offenses. ",
   "pli-tv-kd13:26.2.18": "If it seems appropriate to the Sangha, the Sangha should give him a purifying probation for those offenses. ",
   "pli-tv-kd13:26.2.19": "This is the motion. ",
