--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1150,8 +1150,8 @@
   "pli-tv-kd13:26.2.21": "The monk so-and-so has committed a number of offenses entailing suspension. ",
   "pli-tv-kd13:26.2.22": "He does not know the number of offenses or the number of days; ",
   "pli-tv-kd13:26.2.23": "he does not remember the number of offenses or the number of days; ",
-  "pli-tv-kd13:26.2.24": "he is unsure of the number of offenses and the number of days. ",
-  "pli-tv-kd13:26.2.25": "He is asking the Sangha for purifying probation for those offenses. ",
+  "pli-tv-kd13:26.2.24": "he’s unsure of the number of offenses and the number of days. ",
+  "pli-tv-kd13:26.2.25": "He’s asking the Sangha for purifying probation for those offenses. ",
   "pli-tv-kd13:26.2.26": "The Sangha gives him a purifying probation for those offenses. ",
   "pli-tv-kd13:26.2.27": "Any monk who approves of giving him a purifying probation for those offenses should remain silent. ",
   "pli-tv-kd13:26.2.28": "Any monk who doesn’t approve should speak up. ",
