--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1226,7 +1226,7 @@
   "pli-tv-kd13:27.1.31": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.32": "It may be that a monk on probation is ejected for not giving up a bad view. ",
   "pli-tv-kd13:27.1.33": "For one who is ejected, the probation is suspended. ",
-  "pli-tv-kd13:27.1.34": "If he is re-admitted, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.1.34": "If he’s re-admitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.1.35": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.2.1": "“It may be that a monk deserving to be sent back to the beginning disrobes. ",
   "pli-tv-kd13:27.2.2": "For one who has disrobed, the sending back to the beginning is suspended. ",
