Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1230,7 +1230,7 @@
   "pli-tv-kd13:27.1.35": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.2.1": "“It may be that a monk deserving to be sent back to the beginning disrobes. ",
   "pli-tv-kd13:27.2.2": "For one who has disrobed, the sending back to the beginning is suspended. ",
-  "pli-tv-kd13:27.2.3": "If he is given the full ordination again, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.2.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.2.4": "The probation that was given is valid. The probation he’s already undertaken is valid. ",
   "pli-tv-kd13:27.2.5": "That monk is to be sent back to the beginning. ",
   "pli-tv-kd13:27.2.6": "It may be that a monk deserving to be sent back to the beginning becomes a novice monk, ",
