Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1241,7 +1241,7 @@
   "pli-tv-kd13:27.2.11": "is ejected for not making amends for an offense, ",
   "pli-tv-kd13:27.2.12": "or is ejected for not giving up a bad view. ",
   "pli-tv-kd13:27.2.13": "For any of these, the sending back to the beginning is suspended. ",
-  "pli-tv-kd13:27.2.14": "If he is re-admitted, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.2.14": "If he’s re-admitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.2.15": "The probation that was given is valid. The probation he’s already undertaken is valid. ",
   "pli-tv-kd13:27.2.16": "That monk is to be sent back to the beginning. ",
   "pli-tv-kd13:27.3.1": "“It may be that a monk deserving the trial period of six days disrobes. ",
