Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1246,7 +1246,7 @@
   "pli-tv-kd13:27.2.16": "That monk is to be sent back to the beginning. ",
   "pli-tv-kd13:27.3.1": "“It may be that a monk deserving the trial period of six days disrobes. ",
   "pli-tv-kd13:27.3.2": "For one who has disrobed, the giving of the trial period is suspended. ",
-  "pli-tv-kd13:27.3.3": "If he is given the full ordination again, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.3.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.3.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.3.5": "That monk is to be given the trial period. ",
   "pli-tv-kd13:27.3.6": "It may be that a monk deserving the trial period of six days becomes a novice monk, ",
