--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1262,7 +1262,7 @@
   "pli-tv-kd13:27.3.16": "That monk is to be given the trial period. ",
   "pli-tv-kd13:27.4.1": "“It may be that a monk undertaking the trial period of six days disrobes. ",
   "pli-tv-kd13:27.4.2": "For one who has disrobed, the trial period is suspended. ",
-  "pli-tv-kd13:27.4.3": "If he is given the full ordination again, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.4.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.4.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.4.5": "The trial period that was given is valid. The trial period he’s already undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.4.6": "It may be that a monk undertaking the trial period of six days becomes a novice monk, ",
