--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1273,7 +1273,7 @@
   "pli-tv-kd13:27.4.11": "is ejected for not making amends for an offense, ",
   "pli-tv-kd13:27.4.12": "or is ejected for not giving up a bad view. ",
   "pli-tv-kd13:27.4.13": "For any of these, the trial period is suspended. ",
-  "pli-tv-kd13:27.4.14": "If he is re-admitted, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.4.14": "If he’s re-admitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.4.15": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.4.16": "The trial period that was given is valid. The trial period he’s undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.5.1": "“It may be that a monk deserving rehabilitation disrobes. ",
