Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1278,7 +1278,7 @@
   "pli-tv-kd13:27.4.16": "The trial period that was given is valid. The trial period he’s undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.5.1": "“It may be that a monk deserving rehabilitation disrobes. ",
   "pli-tv-kd13:27.5.2": "For one who has disrobed, the rehabilitation is suspended. ",
-  "pli-tv-kd13:27.5.3": "If he is given the full ordination again, he continues the previous probationary process right away. ",
+  "pli-tv-kd13:27.5.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.5.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.5.5": "The trial period of six days that was given is valid. The trial period he’s undertaken is valid. ",
   "pli-tv-kd13:27.5.6": "That monk is to be rehabilitated. ",
