Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1411,7 +1411,7 @@
   "pli-tv-kd13:29.4.26": "He then disrobes. Being re-ordained and having remembered all the offenses, he conceals all of them. ",
   "pli-tv-kd13:29.4.28": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.5.1": "“It may be that a monk commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:29.5.2": "He is sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:29.5.2": "He’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:29.5.3": "He conceals the offenses he is sure of, ",
   "pli-tv-kd13:29.5.4": "but not those he is unsure of. ",
   "pli-tv-kd13:29.5.5": "He then disrobes. Being re-ordained and having become sure of all the offenses, he conceals none of them. ",
