Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1426,14 +1426,14 @@
   "pli-tv-kd13:29.5.15": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.5.16": "He’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:29.5.17": "He conceals the offenses he’s sure of, ",
-  "pli-tv-kd13:29.5.18": "but not those he is unsure of. ",
+  "pli-tv-kd13:29.5.18": "but not those he’s unsure of. ",
   "pli-tv-kd13:29.5.19": "He then disrobes. Being re-ordained and having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
   "pli-tv-kd13:29.5.20": "but not those he was unsure of. ",
   "pli-tv-kd13:29.5.21": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.5.22": "It may be that a monk commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:29.5.23": "He is sure of some of the offenses, but unsure of others. ",
-  "pli-tv-kd13:29.5.24": "He conceals the offenses he is sure of, ",
-  "pli-tv-kd13:29.5.25": "but not those he is unsure of. ",
+  "pli-tv-kd13:29.5.23": "He’s sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:29.5.24": "He conceals the offenses he’s sure of, ",
+  "pli-tv-kd13:29.5.25": "but not those he’s unsure of. ",
   "pli-tv-kd13:29.5.26": "He then disrobes. Being re-ordained and having become sure of all the offenses, he conceals all of them. ",
   "pli-tv-kd13:29.5.28": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:30.1.1": "“It may be that a monk commits a number of unconcealed offenses entailing suspension and then becomes a novice monk … ",
