Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1471,7 +1471,7 @@
   "pli-tv-kd13:31.1.12": "It may be that a monk on probation commits a number of concealed offenses entailing suspension, and then disrobes. ",
   "pli-tv-kd13:31.1.13": "Being re-ordained, he conceals those offenses. ",
   "pli-tv-kd13:31.1.14": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.1.15": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.1.15": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.1": "“It may be that a monk on probation commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:31.2.2": "both concealed and unconcealed, ",
   "pli-tv-kd13:31.2.3": "and then disrobes. Being re-ordained, he conceals none of those offenses. ",
