Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1482,7 +1482,7 @@
   "pli-tv-kd13:31.2.9": "and then disrobes. Being re-ordained, he doesn’t conceal those offenses he previously concealed, ",
   "pli-tv-kd13:31.2.10": "but he conceals those he previously didn’t conceal. ",
   "pli-tv-kd13:31.2.11": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.2.12": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.2.12": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.13": "It may be that a monk on probation commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:31.2.14": "both concealed and unconcealed, ",
   "pli-tv-kd13:31.2.15": "and then disrobes. Being re-ordained, he conceals those offenses he previously concealed, ",
