Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1488,12 +1488,12 @@
   "pli-tv-kd13:31.2.15": "and then disrobes. Being re-ordained, he conceals those offenses he previously concealed, ",
   "pli-tv-kd13:31.2.16": "but he doesn’t conceal those he previously didn’t conceal. ",
   "pli-tv-kd13:31.2.17": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.2.18": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.2.18": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.2.19": "It may be that a monk on probation commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:31.2.20": "both concealed and unconcealed, ",
   "pli-tv-kd13:31.2.21": "and then disrobes. Being re-ordained, he conceals all those offenses. ",
   "pli-tv-kd13:31.2.23": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.2.24": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.2.24": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.1": "“It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.2": "He knows about some of the offenses, but not others. ",
   "pli-tv-kd13:31.3.3": "He conceals the offenses he knows about, ",
