--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1508,7 +1508,7 @@
   "pli-tv-kd13:31.3.13": "He then disrobes. Being re-ordained and having found out about all the offenses, he doesn’t conceal those offenses he previously knew about, ",
   "pli-tv-kd13:31.3.14": "but he conceals those he didn’t know about. ",
   "pli-tv-kd13:31.3.15": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.16": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.16": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.17": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.18": "He knows about some of the offenses, but not others. ",
   "pli-tv-kd13:31.3.19": "He conceals the offenses he knows about, ",
