--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1516,13 +1516,13 @@
   "pli-tv-kd13:31.3.21": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals those offenses he previously knew about, ",
   "pli-tv-kd13:31.3.22": "but not those he didn’t know about. ",
   "pli-tv-kd13:31.3.23": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.24": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.24": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.25": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.26": "He knows about some of the offenses, but not others. ",
   "pli-tv-kd13:31.3.27": "He conceals the offenses he knows about, but not those he doesn’t know about. ",
   "pli-tv-kd13:31.3.28": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals all of them. ",
   "pli-tv-kd13:31.3.30": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.31": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.31": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.32": "“It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.33": "He remembers some of the offenses, but not others. ",
   "pli-tv-kd13:31.3.34": "He conceals the offenses he remembers, ",
