Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1537,7 +1537,7 @@
   "pli-tv-kd13:31.3.44": "He then disrobes. Being re-ordained and having remembered all the offenses, he doesn’t conceal those offenses he previously remembered, ",
   "pli-tv-kd13:31.3.45": "but he conceals those he didn’t remember. ",
   "pli-tv-kd13:31.3.46": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.47": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.47": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.48": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.49": "He remembers some of the offenses, but not others. ",
   "pli-tv-kd13:31.3.50": "He conceals the offenses he remembers, ",
