Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1552,14 +1552,14 @@
   "pli-tv-kd13:31.3.59": "but not those he doesn’t remember. ",
   "pli-tv-kd13:31.3.60": "He then disrobes. Being re-ordained and having remembered all the offenses, he conceals all of them. ",
   "pli-tv-kd13:31.3.62": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.63": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.63": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.64": "“It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.65": "He’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:31.3.66": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:31.3.67": "but not those he’s unsure of. ",
   "pli-tv-kd13:31.3.68": "He then disrobes. Being re-ordained and having become sure of all the offenses, he conceals none of them. ",
   "pli-tv-kd13:31.3.70": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.71": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.71": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.72": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.73": "He is sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:31.3.74": "He conceals the offenses he is sure of, ",
