--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1561,13 +1561,13 @@
   "pli-tv-kd13:31.3.70": "That monk is to be sent back to the beginning. ",
   "pli-tv-kd13:31.3.71": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.72": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.73": "He is sure of some of the offenses, but unsure of others. ",
-  "pli-tv-kd13:31.3.74": "He conceals the offenses he is sure of, ",
-  "pli-tv-kd13:31.3.75": "but not those he is unsure of. ",
+  "pli-tv-kd13:31.3.73": "He’s sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:31.3.74": "He conceals the offenses he’s sure of, ",
+  "pli-tv-kd13:31.3.75": "but not those he’s unsure of. ",
   "pli-tv-kd13:31.3.76": "He then disrobes. Being re-ordained and having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
   "pli-tv-kd13:31.3.77": "but he conceals those he was unsure of. ",
   "pli-tv-kd13:31.3.78": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.79": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.79": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.80": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:31.3.81": "He is sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:31.3.82": "He conceals the offenses he is sure of, ",
